publish: Adjust wording
generated from commit 81ad0944f2031b7ec39f0a59d0ed98e9d271be7e

--- a/index-rw.html
+++ b/index-rw.html
@@ -122,6 +122,10 @@
 
 <p>Welcome to the Resource Watch API Documentation</p>
 
+<aside class="notice">
+  All use of the Resource Watch API is governed by the Resource Watch <a href="https://resourcewatch.org/terms-of-service" target="_blank">Terms of Service</a> and <a href="https://resourcewatch.org/api-attribution-requirements" target="_blank">API Attribution Requirements</a>.
+</aside>
+
           <h1 id="concepts">Concepts</h1>
 
 <h2 id="dataset">Dataset</h2>
